# genadii

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.sandbox  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_saved_scripts.py  0003_usage_user.py  0004_indexes.py  0005_mcp_webhooks.py  0006_mcp_oauth.py  0007_skills.py  0008_message_media.py  0009_mcp_oauth_meta.py  0010_app_settings.py  0011_models_catalog.py
app/: config.py  main.py  worker.py
app/bot/: commands.py  errors.py  formatting.py  setup.py
app/db/: session.py
app/llm/: capabilities.py  client.py  embeddings.py  http.py  prompts.py  retry.py
app/services/: alerts.py  app_settings.py  audit.py  budget.py  digest.py  documents.py  guard.py  heartbeat.py  llm_chat.py  mcp.py  mcp_auth.py  memory.py  messages.py  models_catalog.py  (+5 more)
sandbox/: runner.py
tests/: conftest.py  test_addressed.py  test_app_settings.py  test_capabilities.py  test_client_nonjson.py  test_embedding_cache.py  test_failure_nudge.py  test_formatting.py  test_guard_offtopic.py  test_heartbeat.py  test_history_edit.py  test_leaked_tool_syntax.py  test_mcp_naming.py  test_mcp_oauth.py  test_mcp_reauth.py  test_mcp_token_refresh.py  test_mcp_tools.py  test_memory.py  test_model_router.py  test_models_catalog.py  test_photo_from_history.py  test_prompt_cache.py  test_reply_context.py  test_safe_error_text.py  test_scripts_isolation.py  test_scripts_naming.py  test_skills.py  test_smart_model_fallback.py  test_stream_editor.py  test_task_claim.py  test_time_gap.py  test_webhooks.py
(+63 files in other folders)
