[project]
name = "smart-gennady"
version = "0.1.0"
description = "Умный Геннадий — self-hosted Telegram AI bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "arq>=0.26",
    "tzdata>=2024.2",
    "croniter>=2.0",
    "beautifulsoup4>=4.12",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
