[project]
name = "smart-gennady"
version = "0.1.0"
description = "Умный Геннадий — self-hosted Telegram AI bot"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.15",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic-settings>=2.6",
    "redis>=5.2",
    "pgvector>=0.3.6",
    "httpx>=0.28",
    "arq>=0.26",
    "tzdata>=2024.2",
    "croniter>=2.0",
    "beautifulsoup4>=4.12",
    "pypdf>=5.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
